[package]
name = "webhook_recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
base64 = "0.21.2"
chrono = "0.4.26"
dotenv = "0.15.0"
serde = { version = "1.0.169", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["postgres", "chrono", "uuid", "runtime-async-std", "macros", "json"] }
tide = "0.16.0"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
